# Cryptingtool

./: .gitignore  ANDROID_16_CONFIG.md  ANDROID_BUILD_WORKFLOWS.md  ANDROID_LICENSE_FIX.md  ANDROID_V2_EMBEDDING_FIX.md  API_24_MODERNIZATION.md  APK_BUILDER.md  APK_IMPLEMENTATION.md  BACKEND_INTEGRATION.md  CMakeLists.txt  CRYPTO_BRIDGE.md  CRYPTO_TROUBLESHOOTING.md  FEATURES.md  FLUTTER_BUILD_FIX_SUMMARY.md  FLUTTER_SDK_UPGRADE_2025.md  GRADLE_BUILD_FIX.md  GRADLE_PLUGIN_MODERNIZATION.md  GRADLE_REPOSITORY_FIX.md  ICON_IMPLEMENTATION.md  ICON_IMPLEMENTATION_GUIDE.md  ICON_SPECIFICATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KOTLIN_ANDROID_OVERHAUL.md  KOTLIN_MIGRATION.md  KOTLIN_UNSOLVED_REFERENCE_FIX.md  LIBRARY_IMPROVEMENTS.md  NDK_BUILD_MIGRATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  SDK_ENHANCEMENT_2025.md  action.yml  analysis_options.yaml  blue_icon_preview.html  build.bat  build.sh  clean_flutter_cache.sh  comparison.html  crypto_troubleshoot.sh  (+18 more)
.github/workflows/: README.md  android_build.yml  android_release_build.yml  build apk.yaml  build-apk.yml  build-debug-apk.yml  build_all.yml  manual-build.yml  package.yml  release.yml  test-apk.yml  test.yml  windows-apk-build.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  local.properties  local.properties.template  settings.gradle  settings.gradle.backup  settings.gradle.minimal
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.backup  README.md
android/app/src/main/java/com/binah/cryptingtool/: MainActivity.java
android/app/src/main/jni/: Android.mk  Application.mk  placeholder.cpp
android/app/src/main/kotlin/com/binah/cryptingtool/: MainActivity.kt
android/app/src/main/kotlin/com/binah/cryptingtool/config/: BuildConfig.kt
android/app/src/main/kotlin/com/binah/cryptingtool/crypto/: CryptoBridgeService.kt  CryptoConstants.kt
android/app/src/main/kotlin/com/binah/cryptingtool/models/: AppState.kt  EncryptionConfig.kt  LogEntry.kt
android/app/src/main/kotlin/com/binah/cryptingtool/ui/components/: AdvancedSettingsPanel.kt  CpuChipIcon.kt  EncryptionConfigPanel.kt  FileIOPanel.kt  LogConsolePanel.kt  StatusBar.kt
android/app/src/main/kotlin/com/binah/cryptingtool/ui/screens/: MainScreen.kt
android/app/src/main/kotlin/com/binah/cryptingtool/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/kotlin/com/binah/cryptingtool/ui/viewmodels/: MainViewModel.kt
android/app/src/main/kotlin/com/binaharbitor/cryptingtool/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  themes.xml
android/gradle/src/main/resources/: .gitkeep
assets/icons/: ICON_DESIGN.md  README.md
include/: crypting.h  crypto_bridge.h  crypto_compat.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: crypto_bindings.dart  crypto_service.dart  main.dart  theme.dart
lib/crypto_bridge/: crypto_bridge_service.dart  crypto_constants.dart  crypto_ffi.dart  crypto_result.dart
lib/models/: app_state.dart  encryption_config.dart  encryption_models.dart  file_info.dart  log_entry.dart
lib/providers/: app_state_provider.dart
lib/screens/: crypting_tool_screen.dart
lib/services/: app_state.dart  backend_service.dart  cryptography_service.dart
lib/theme/: app_theme.dart
lib/views/: main_screen.dart
lib/widgets/: action_buttons_panel.dart  advanced_settings_panel.dart  cpu_chip_icon.dart  encryption_config_panel.dart  file_io_panel.dart  file_selection_panel.dart  live_console_panel.dart  log_console_panel.dart  status_bar.dart  status_bar_panel.dart  status_panel.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  crypto.cpp  crypto.h
scripts/: accept-android-licenses.bat  accept-android-licenses.ps1  build-cpp.sh  build-flutter.sh  check-dependencies.sh  demonstrate-apk-build-workflow.sh  flutter-doctor-fix.sh  integration-test-android16.sh  integration-test.sh  package.sh  test-action-locally.sh  test-android-config-35.sh  test-android-config.sh  test-android-license-fix.sh  test-apk-build-comprehensive.sh  test-build-environment-simulation.sh  test-gradle-fixes.sh  test-kotlin-android-layer.sh  test-libraries.sh  troubleshoot.sh  validate-setup.sh  validate_apk_build.sh  validate_workflow.sh  verify-android-api35.sh  verify-crypto-includes.sh  verify-crypto.sh  verify-sdk.sh
src/: crypting.cpp  crypto_bridge.cpp
test/: cpu_chip_icon_test.dart  crypto_service_test.dart  test_crypto_includes.cpp  widget_test.dart
test_build/: Makefile  cmake_install.cmake  test_crypto_includes
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
